--- a/labs/2d-map-rendering/src/index.html
+++ b/labs/2d-map-rendering/src/index.html
@@ -73,6 +73,8 @@
     <label>Emissive</label>
     <input type="radio" name="mode" value="roughness">
     <label>Roughness</label>
+    <input type="radio" name="mode" value="normal">
+    <label>Normal</label>
 
     <canvas id="canvas" width="4096px" height="4096px" style="transform: scale(0.25)"></canvas>
 
