--- a/labs/minimap/index.html
+++ b/labs/minimap/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <div id="minimap" style="position: absolute; left:0; bottom:0; height:300px; width: 300px">&nbsp;</div>
     <canvas id="three-js"></canvas>
     <script src="index.js"></script>
 </body>
