use sampled rendering

--- a/labs/2d-map-rendering/index.html
+++ b/labs/2d-map-rendering/index.html
@@ -40,7 +40,7 @@
     <input type="radio" name="mode" value="normal">
     <label>Normal</label>
 
-    <canvas id="canvas" style="transform: scale(0.25)"></canvas>
+    <canvas id="canvas"></canvas>
 
     <a id="download" href="" download>download</a>
     <script src="index.js"></script>
