--- a/labs/3d-map-loading/index.html
+++ b/labs/3d-map-loading/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {
+            margin: 0
+        }
+
         .lds-dual-ring {
+            position: absolute;
             display: inline-block;
             width: 80px;
             height: 80px;
@@ -33,12 +38,58 @@
                 transform: rotate(360deg);
             }
         }
+
+        #load-overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.9);
+            /* display: none */
+            display: flex;
+
+        }
+
+        #map-name {
+            color: white;
+            font-size: 32px;
+            font-family: "Blizzard Regular", Arial, Helvetica, sans-serif;
+        }
+
+        #map-description {
+            color: #eee;
+            font-size: 12px;
+            width: 100%;
+            text-align: center;
+            font-family: "Blizzard Regular", Arial, Helvetica, sans-serif;
+        }
+
+        #map-preview .graphic {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            filter: brightness(2) contrast(1.2);
+        }
     </style>
 </head>
 
 <body>
 
-    <div class="lds-dual-ring"></div>
+    <div id="load-overlay">
+        <div id="map-preview">
+            <span class="graphic">
+                <canvas id="map--preview-canvas">
+                </canvas>
+                <p id="map-name">Use the file menu to load a replay or map</p>
+                <p id="map-description"></p>
+            </span>
+            <!-- <div class="lds-dual-ring"></div> -->
+
+        </div>
+    </div>
+
     <script src="index.js"></script>
 </body>
 
