--- a/src/renderer/camera/camera-effects/index.html
+++ b/src/renderer/camera/camera-effects/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 
-<body>
-    <canvas id="three-js"></canvas>
+<body style="margin:0">
+    <div id="app"></div>
     <script src="index.js"></script>
 </body>
 
