--- a/packages/titan-reactor/bundled/plugins/clock/modern.html
+++ b/packages/titan-reactor/bundled/plugins/clock/modern.html
@@ -1,16 +1,14 @@
     <div class="bevel-gray-800 text-gray"
         style="font-weight: bold; font-size: var(--fontSize); padding-left: 0.2rem; padding-bottom: 0.2rem;">
         <span style="display: inline;">
-            <titan-subscribe store="OnFrame" value="friendlyTime" debug /></span>
+            <titan-subscribe store="OnFrame" value="friendlyTime" /></span>
     </div>
 
     <span style="display: flex">
         <span class="bg-gray-700 text-gray-400"
             style="padding-left: 0.2rem; padding-right: 0.2rem; text-transform: uppercase; text-overflow: ellipsis; flex-grow: 1;">
-            <p
-                style='opacity: 0.8; white-space: nowrap; max-width: calc(var(--minimap-width) - 30px); text-overflow: ellipsis; overflow: hidden'>
-                <titan-subscribe store="World" value="map.title" />
-            </p>
+            <titan-subscribe store="World" value="map.title"
+                style='opacity: 0.8; white-space: nowrap; max-width: calc(var(--minimap-width) - 30px); text-overflow: ellipsis; overflow: hidden' />
         </span>
-        <span class="bevel-gray-700" style="width: 2rem; align-self:stretch;"></span>
+        <span class="bevel-gray-700" style="width: 100%; align-self:stretch;"></span>
     </span>
