wrap plugins in web components and isolated stylesheets

--- a/packages/titan-reactor/bundled/plugins/runtime.html
+++ b/packages/titan-reactor/bundled/plugins/runtime.html
@@ -6,7 +6,8 @@
       "imports": {
       "titan-reactor": "./runtime.jsx",
       "react": "https://cdn.skypack.dev/react@17.0.2",
-      "react-dom": "https://cdn.skypack.dev/react-dom@17.0.2"
+      "react-dom": "https://cdn.skypack.dev/react-dom@17.0.2",
+      "zustand": "https://cdn.skypack.dev/zustand@3.7.1"
       }
     }
   </script>
@@ -14,12 +15,12 @@
   <script type="module" src="https://cdn.skypack.dev/react@17.0.2"> </script>
   <script type="module" src="https://cdn.skypack.dev/react-dom@17.0.2">
   </script>
+  <script type="module" src="https://cdn.skypack.dev/zustand@3.7.1"> </script>
   <script async type="module" src="runtime.jsx" />
   </script>
 </head>
 
 <body>
-  <div id="app"></div>
 </body>
 
 </html>
