--- a/packages/titan-reactor/bundled/plugins/simple-loading-screen/plugin.html
+++ b/packages/titan-reactor/bundled/plugins/simple-loading-screen/plugin.html
@@ -18,7 +18,7 @@
             import React from 'react';
             import { registerChannel } from "titan-reactor";
 
-            registerChannel("_channel_id_", () => <h1 style={{color: "white"}}>Welcome to Titan Reactor</h1>);
+            registerChannel("_channel_id_", () => <div style={{display:'flex', flexDirection: "column", color:"white" }}><p>Welcome to </p><h1 style={{fontFamily:"Conthrax"}} >Titan Reactor</h1></div>);
         </script>
     </panel>
 </plugin>
