--- a/packages/titan-reactor/bundled/plugins/simple-loading-screen/plugin.html
+++ b/packages/titan-reactor/bundled/plugins/simple-loading-screen/plugin.html
@@ -18,7 +18,7 @@
             import React from 'react';
             import { registerComponent } from "titan-reactor";
 
-            registerComponent("_channel_id_", () => <div style={{display:'flex', flexDirection: "column", color:"white" }}><p>Welcome to </p><h1 style={{fontFamily:"Conthrax"}} >Titan Reactor</h1></div>);
+            registerComponent({ channelId: "_channel_id_" }, () => <div style={{display:'flex', flexDirection: "column", color:"white" }}><p>Welcome to </p><h1 style={{fontFamily:"Conthrax"}} >Titan Reactor</h1></div>);
         </script>
     </channel>
 </plugin>
