react 17 -> 18 for config ui

--- a/bundled/plugins-runtime/runtime.html
+++ b/bundled/plugins-runtime/runtime.html
@@ -49,15 +49,16 @@
     {
       "imports": {
       "titan-reactor": "./runtime.jsx",
-      "react": "https://cdn.skypack.dev/react@17.0.2",
-      "react-dom": "https://cdn.skypack.dev/react-dom@17.0.2",
-      "react-dom/test-utils": "https://cdn.skypack.dev/react-dom@17.0.2/test-utils",
+      "react": "https://cdn.skypack.dev/react@18.2.0",
+      "react-dom": "https://cdn.skypack.dev/react-dom@18.2.0",
+      "react-dom/client": "https://cdn.skypack.dev/react-dom@18.2.0/client",
+      "react-dom/test-utils": "https://cdn.skypack.dev/react-dom@18.2.0/test-utils",
       "zustand": "https://cdn.skypack.dev/zustand@3.7.1"
       }
     }
   </script>
-  <script type="module" src="https://cdn.skypack.dev/react@17.0.2"> </script>
-  <script type="module" src="https://cdn.skypack.dev/react-dom@17.0.2">
+  <script type="module" src="https://cdn.skypack.dev/react@18.2.0"> </script>
+  <script type="module" src="https://cdn.skypack.dev/react-dom@18.2.0">
   </script>
   <script type="module" src="https://cdn.skypack.dev/zustand@3.7.1"> </script>
   <script async type="module" src="runtime.jsx" />
