feature: rudimentary support tsx for ui plugins

--- a/bundled/plugins-runtime/runtime.html
+++ b/bundled/plugins-runtime/runtime.html
@@ -50,6 +50,7 @@
       "imports": {
       "titan-reactor": "./runtime.jsx",
       "react": "https://cdn.skypack.dev/react@18.2.0",
+      "react/jsx-runtime": "https://cdn.skypack.dev/react@18.2.0/jsx-runtime",
       "react-dom": "https://cdn.skypack.dev/react-dom@18.2.0",
       "react-dom/client": "https://cdn.skypack.dev/react-dom@18.2.0/client",
       "react-dom/test-utils": "https://cdn.skypack.dev/react-dom@18.2.0/test-utils",
