first pass at building types for plugins

--- a/src/main/plugins/runtime.html
+++ b/src/main/plugins/runtime.html
@@ -48,7 +48,7 @@
   <script type="importmap">
     {
       "imports": {
-      "titan-reactor": "./runtime.jsx",
+      "titan-reactor": "./runtime.tsx",
       "react": "https://cdn.skypack.dev/react@18.2.0",
       "react/jsx-runtime": "https://cdn.skypack.dev/react@18.2.0/jsx-runtime",
       "react-dom": "https://cdn.skypack.dev/react-dom@18.2.0",
@@ -62,7 +62,7 @@
   <script type="module" src="https://cdn.skypack.dev/react-dom@18.2.0">
   </script>
   <script type="module" src="https://cdn.skypack.dev/zustand@3.7.1"> </script>
-  <script async type="module" src="runtime.jsx" />
+  <script async type="module" src="runtime.tsx" />
   </script>
 </head>
 
