extending plugin types

--- a/src/main/plugins/runtime.html
+++ b/src/main/plugins/runtime.html
@@ -48,7 +48,7 @@
   <script type="importmap">
     {
       "imports": {
-      "titan-reactor": "./runtime.tsx",
+      "titan-reactor/runtime": "./runtime.tsx",
       "react": "https://cdn.skypack.dev/react@18.2.0",
       "react/jsx-runtime": "https://cdn.skypack.dev/react@18.2.0/jsx-runtime",
       "react-dom": "https://cdn.skypack.dev/react-dom@18.2.0",
