simplify cpu mouse cursor

--- a/src/main/plugins/runtime.html
+++ b/src/main/plugins/runtime.html
@@ -2,27 +2,27 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="https://unpkg.com/open-props" />
-  <link rel="stylesheet" href="https://unpkg.com/open-props/normalize.min.css" />
+  <link rel="stylesheet" href="bundled/assets/open-props.1.4.min.css" />
+  <link rel="stylesheet" href="bundled/assets/normalize.min.css" />
 
   <style>
     @font-face {
       font-family: 'Conthrax';
-      src: url("runtime/fonts/conthrax-rg.otf") format("opentype");
+      src: url("bundled/assets/conthrax-rg.otf") format("opentype");
       font-style: normal;
       font-weight: 100 400;
     }
 
     @font-face {
       font-family: 'Conthrax-Bold';
-      src: url("runtime/fonts/conthrax-hv.otf") format("opentype");
+      src: url("bundled/assets/conthrax-hv.otf") format("opentype");
       font-style: normal;
       font-weight: 500 900;
     }
 
     @font-face {
       font-family: "Inter";
-      src: url("runtime/fonts/Inter-VariableFont_slnt,wght.ttf") format("truetype");
+      src: url("bundled/assets/Inter-VariableFont_slnt,wght.ttf") format("truetype");
     }
 
     :root {
