--- a/src/main/plugins/runtime.html
+++ b/src/main/plugins/runtime.html
@@ -62,7 +62,7 @@
   <script type="module" src="https://cdn.skypack.dev/react-dom@18.2.0">
   </script>
   <script type="module" src="https://cdn.skypack.dev/zustand@3.7.1"> </script>
-  <script async type="module" src="runtime.tsx" />
+  <script type="module" src="runtime.tsx" />
   </script>
 </head>
 
