--- a/command-center.html
+++ b/command-center.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" style="background: white">
+    <head>
+        <meta charset="utf-8" />
+    </head>
 
-<head>
-    <meta charset="utf-8">
-</head>
-
-<body>
-    <div id="app"></div>
-    <script type="module" src="./src/renderer/command-center/command-center.tsx"></script>
-</body>
-
+    <body style="overflow: auto">
+        <div id="app"></div>
+        <script
+            type="module"
+            src="./src/renderer/command-center/command-center.tsx"></script>
+    </body>
 </html>
