--- a/src/main/plugins/runtime.html
+++ b/src/main/plugins/runtime.html
@@ -1,72 +1,70 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="bundled/assets/open-props.1.4.min.css" />
+        <link rel="stylesheet" href="bundled/assets/normalize.min.css" />
 
-<head>
-  <link rel="stylesheet" href="bundled/assets/open-props.1.4.min.css" />
-  <link rel="stylesheet" href="bundled/assets/normalize.min.css" />
+        <style>
+            @font-face {
+                font-family: "Conthrax";
+                src: url("bundled/assets/conthrax-rg.otf") format("opentype");
+                font-style: normal;
+                font-weight: 100 400;
+            }
 
-  <style>
-    @font-face {
-      font-family: 'Conthrax';
-      src: url("bundled/assets/conthrax-rg.otf") format("opentype");
-      font-style: normal;
-      font-weight: 100 400;
-    }
+            @font-face {
+                font-family: "Conthrax-Bold";
+                src: url("bundled/assets/conthrax-hv.otf") format("opentype");
+                font-style: normal;
+                font-weight: 500 900;
+            }
 
-    @font-face {
-      font-family: 'Conthrax-Bold';
-      src: url("bundled/assets/conthrax-hv.otf") format("opentype");
-      font-style: normal;
-      font-weight: 500 900;
-    }
+            @font-face {
+                font-family: "Inter";
+                src: url("bundled/assets/Inter-VariableFont_slnt,wght.ttf")
+                    format("truetype");
+            }
 
-    @font-face {
-      font-family: "Inter";
-      src: url("bundled/assets/Inter-VariableFont_slnt,wght.ttf") format("truetype");
-    }
+            :root {
+                --font-sans: Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu,
+                    Cantarell, Noto Sans, sans-serif, Segoe UI, Roboto, Ubuntu,
+                    Cantarell, Noto Sans, sans-serif;
+            }
 
-    :root {
-      --font-sans: Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif;
-    }
+            html {
+                background-color: transparent;
+            }
 
-    html {
-      background-color: transparent;
-    }
+            body {
+                font-family: var(--font-sans);
+                max-block-size: 100%;
+                max-inline-size: 100%;
+                overflow: hidden;
+            }
+        </style>
+        <script>
+            window.process = {
+                env: "development",
+            };
+        </script>
+        <script type="importmap">
+            {
+                "imports": {
+                    "titan-reactor/runtime": "./runtime.tsx",
+                    "react": "https://cdn.skypack.dev/react@18.2.0",
+                    "react/jsx-runtime": "https://cdn.skypack.dev/react@18.2.0/jsx-runtime",
+                    "react-dom": "https://cdn.skypack.dev/react-dom@18.2.0",
+                    "react-dom/client": "https://cdn.skypack.dev/react-dom@18.2.0/client",
+                    "react-dom/test-utils": "https://cdn.skypack.dev/react-dom@18.2.0/test-utils",
+                    "zustand": "https://cdn.skypack.dev/zustand@3.7.1"
+                }
+            }
+        </script>
+        <script type="module" src="https://cdn.skypack.dev/react@18.2.0"></script>
+        <script type="module" src="https://cdn.skypack.dev/react-dom@18.2.0"></script>
+        <script type="module" src="https://cdn.skypack.dev/zustand@3.7.1"></script>
+        <script type="module" src="runtime.tsx"></script>
+    </head>
 
-    body {
-      font-family: var(--font-sans);
-      max-block-size: 100%;
-      max-inline-size: 100%;
-      overflow: hidden;
-    }
-  </style>
-  <script>
-    window.process = {
-      env: "development"
-    }
-  </script>
-  <script type="importmap">
-    {
-      "imports": {
-      "titan-reactor/runtime": "./runtime.tsx",
-      "react": "https://cdn.skypack.dev/react@18.2.0",
-      "react/jsx-runtime": "https://cdn.skypack.dev/react@18.2.0/jsx-runtime",
-      "react-dom": "https://cdn.skypack.dev/react-dom@18.2.0",
-      "react-dom/client": "https://cdn.skypack.dev/react-dom@18.2.0/client",
-      "react-dom/test-utils": "https://cdn.skypack.dev/react-dom@18.2.0/test-utils",
-      "zustand": "https://cdn.skypack.dev/zustand@3.7.1"
-      }
-    }
-  </script>
-  <script type="module" src="https://cdn.skypack.dev/react@18.2.0"> </script>
-  <script type="module" src="https://cdn.skypack.dev/react-dom@18.2.0">
-  </script>
-  <script type="module" src="https://cdn.skypack.dev/zustand@3.7.1"> </script>
-  <script type="module" src="runtime.tsx" />
-  </script>
-</head>
-
-<body>
-</body>
-
+    <body></body>
 </html>
