add optimized skypack repos

--- a/src/main/plugins/runtime.html
+++ b/src/main/plugins/runtime.html
@@ -51,12 +51,12 @@
             {
                 "imports": {
                     "titan-reactor-runtime": "./runtime.tsx",
-                    "react": "https://cdn.skypack.dev/react@18.2.0",
-                    "react/jsx-runtime": "https://cdn.skypack.dev/react@18.2.0/jsx-runtime",
-                    "react-dom": "https://cdn.skypack.dev/react-dom@18.2.0",
-                    "react-dom/client": "https://cdn.skypack.dev/react-dom@18.2.0/client",
-                    "react-dom/test-utils": "https://cdn.skypack.dev/react-dom@18.2.0/test-utils",
-                    "zustand": "https://cdn.skypack.dev/zustand@3.7.1"
+                    "react": "https://cdn.skypack.dev/pin/react@v17.0.1-yH0aYV1FOvoIPeKBbHxg/mode=imports,min/optimized/react.js",
+                    "react/jsx-runtime": "https://cdn.skypack.dev/pin/react@v17.0.1-yH0aYV1FOvoIPeKBbHxg/mode=imports,min/unoptimized/jsx-runtime.js",
+                    "react-dom": "https://cdn.skypack.dev/pin/react-dom@v17.0.1-oZ1BXZ5opQ1DbTh7nu9r/mode=imports,min/optimized/react-dom.js",
+                    "react-dom/client": "https://cdn.skypack.dev/pin/react-dom@v17.0.1-oZ1BXZ5opQ1DbTh7nu9r/mode=raw,min/client",
+                    "react-dom/test-utils": "https://cdn.skypack.dev/pin/react-dom@v17.0.1-oZ1BXZ5opQ1DbTh7nu9r/mode=imports,min/unoptimized/test-utils.js",
+                    "zustand": "https://cdn.skypack.dev/pin/zustand@v3.7.1-mEclQ0TBZsR5pwn7Ov2F/mode=imports,min/optimized/zustand.js"
                 }
             }
         </script>
