change ui runtime namespace

--- a/src/main/plugins/runtime.html
+++ b/src/main/plugins/runtime.html
@@ -50,7 +50,7 @@
         <script type="importmap">
             {
                 "imports": {
-                    "titan-reactor/runtime": "./runtime.tsx",
+                    "@titan-reactor-runtime/ui": "./runtime.tsx",
                     "react": "https://cdn.skypack.dev/pin/react@v17.0.1-yH0aYV1FOvoIPeKBbHxg/mode=imports,min/optimized/react.js",
                     "react/jsx-runtime": "https://cdn.skypack.dev/pin/react@v17.0.1-yH0aYV1FOvoIPeKBbHxg/mode=imports,min/unoptimized/jsx-runtime.js",
                     "react-dom": "https://cdn.skypack.dev/pin/react-dom@v17.0.1-oZ1BXZ5opQ1DbTh7nu9r/mode=imports,min/optimized/react-dom.js",
