--- a/src/main/ui-server/runtime.html
+++ b/src/main/ui-server/runtime.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="bundled/assets/open-props.1.4.min.css" />
-        <link rel="stylesheet" href="bundled/assets/normalize.min.css" />
+        <link rel="stylesheet" href="https://unpkg.com/open-props@1.6.8/open-props.min.css" />
+        <link rel="stylesheet" href="https://unpkg.com/open-props@1.6.8/normalize.min.css" />
 
         <style>
             @font-face {
