setup local storage and initial server urls

--- a/runtime.html
+++ b/runtime.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://unpkg.com/open-props@1.6.8/open-props.min.css" />
-        <link rel="stylesheet" href="https://unpkg.com/open-props@1.6.8/normalize.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/open-props@1.6.8/open-props.min.css" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/open-props@1.6.8/normalize.min.css" />
 
         <style>
             @font-face {
                 font-family: "Conthrax";
-                src: url("bundled/assets/conthrax-rg.otf") format("opentype");
+                src: url("conthrax-rg.otf") format("opentype");
                 font-style: normal;
                 font-weight: 100 400;
             }
 
             @font-face {
                 font-family: "Conthrax-Bold";
-                src: url("bundled/assets/conthrax-hv.otf") format("opentype");
+                src: url("conthrax-hv.otf") format("opentype");
                 font-style: normal;
                 font-weight: 500 900;
             }
 
             @font-face {
                 font-family: "Inter";
-                src: url("bundled/assets/Inter-VariableFont_slnt,wght.ttf")
-                    format("truetype");
+                src: url("Inter-VariableFont_slnt,wght.ttf") format("truetype");
             }
 
             :root {
