Refactor settings store and function utilities, update vite config
- Removed unused properties from settings store state
- Updated save method in settings store to await repository save call
- Added optional chaining and non-null assertion in normalizePluginConfiguration function
- Added new command property to rollupOptions in vite config

--- a/configuration.html
+++ b/configuration.html
@@ -6,8 +6,6 @@
 
     <body style="overflow: auto">
         <div id="app"></div>
-        <script
-            type="module"
-            src="./src/renderer/command-center/command-center.tsx"></script>
+        <script type="module" src="./src/renderer/configuration-ui/index.tsx"></script>
     </body>
 </html>
