--- a/configuration.html
+++ b/configuration.html
@@ -2,6 +2,9 @@
 <html lang="en" style="background: white">
     <head>
         <meta charset="utf-8" />
+        <link rel="stylesheet" href="./bundled/assets/normalize.min.css" />
+        <link rel="stylesheet" href="./bundled/assets/open-props.1.4.min.css" />
+        <link rel="stylesheet" href="./bundled/assets/buttons.min.css" />
     </head>
 
     <body style="overflow: auto">
