--- a/src/runtime.html
+++ b/src/runtime.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link
-            rel="stylesheet"
-            href="https://unpkg.com/open-props@1.6.8/open-props.min.css" />
-        <link
-            rel="stylesheet"
-            href="https://unpkg.com/open-props@1.6.8/normalize.min.css" />
+        <link rel="stylesheet" href="assets/open-props.1.4.min.css" />
+        <link rel="stylesheet" href="assets/normalize.min.css" />
 
         <style>
             @font-face {
