--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="./bundled/assets/reset.css" />
+        <link rel="stylesheet" href="./bundled/assets/open-props.1.4.min.css" />
+        <link rel="stylesheet" href="./bundled/styles.css" />
+    </head>
 
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./bundled/styles.css">
-</head>
-
-<body>
-    <div id="app"></div>
-    <script type="module" src="./src/renderer/core/titan-reactor.ts"></script>
-</body>
-
+    <body>
+        <div id="app"></div>
+        <script type="module" src="./src/renderer/core/titan-reactor.ts"></script>
+    </body>
 </html>
