--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="./bundled/assets/reset.css" />
-        <link rel="stylesheet" href="./bundled/assets/open-props.1.4.min.css" />
-        <link rel="stylesheet" href="./bundled/styles.css" />
+        <link rel="stylesheet" href="/assets/reset.css" />
+        <link rel="stylesheet" href="/assets/open-props.1.4.min.css" />
+        <link rel="stylesheet" href="/styles.css" />
     </head>
 
     <body>
