--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
         <link rel="stylesheet" href="/assets/reset.css" />
         <link rel="stylesheet" href="/assets/open-props.1.4.min.css" />
         <link rel="stylesheet" href="/styles.css" />
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-5YQYLX790M"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-5YQYLX790M');
+        </script>
     </head>
 
     <body>
